--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -51,24 +51,4 @@
     </div>
   </div>
 
-  <script>
-  (function () {
-    'use strict'
-  
-    // Fetch all the forms we want to apply custom Bootstrap validation styles to
-    var forms = document.querySelectorAll('.needs-validation')
-  
-    // Loop over them and prevent submission
-    Array.from(forms)
-      .forEach(function (form) {
-        form.addEventListener('submit', function (event) {
-          if (!form.checkValidity()) {
-            event.preventDefault()
-            event.stopPropagation()
-          }
-  
-          form.classList.add('was-validated')
-        }, false)
-      })
-  })()
-    </script>
+  <script src="/script/validateForms.js"></script>
