--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -31,7 +31,6 @@
         />
         <div class="valid-feedback">Looks good!</div>
       </div>
-      <input type="file" name="image" id="" multiple />
       <div class="mb-3">
         <label class="form-label" for="price">Campground Price</label>
         <div class="input-group">
@@ -59,6 +58,16 @@
           required
         ></textarea>
         <div class="valid-feedback">Looks good!</div>
+      </div>
+      <div class="mb-3">
+        <label for="formFileMultiple" class="form-label">Upload Images</label>
+        <input
+          class="form-control"
+          type="file"
+          id="formFileMultiple"
+          name="image"
+          multiple
+        />
       </div>
       <div class="mb-3">
         <button class="btn btn-success">Add campground</button>
