--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,6 +1,7 @@
 <%layout('/layouts/boilerplate')%>
-<div id="map" style="width: 100%; height: 500px;"></div>
-<h1>Home Campgrounds</h1>
+<div id="cluster-map"></div>
+<div class="container">
+  <h1>Home Campgrounds</h1>
 <div><a href="campgrounds/new">Add new campground</a></div>
 <% for(let campground of campgrounds) {%>
 <div class="card mb-3">
@@ -28,6 +29,7 @@
   </div>
 </div>
 <% } %>
+</div>
 <script> 
   const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
   const campgrounds = {features:<%-JSON.stringify(campgrounds)%>};
