--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -44,7 +44,7 @@
             <div class="mb-3">
                 <div class="mb-3">
                     <label for="formFileMultiple" class="form-label">Add more image(s)...</label>
-                    <input class="form-control" type="file" id="formFileMultiple" multiple>
+                    <input class="form-control" type="file" id="formFileMultiple" name="image" multiple>
                 </div>
             <div class="mb-3">
                 <% campground.images.forEach(function(img, i) {  %>
