--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -47,7 +47,7 @@
             </div>
             <div class="mb-3">
                 <label for="formFileMultiple" class="form-label">Choose image(s)...</label>
-                <input class="form-control" type="file" id="formFileMultiple" multiple>
+                <input class="form-control" type="file" id="formFileMultiple" name="image" multiple>
             </div>
             
             <div class="mb-3">
