--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,40 +1,51 @@
 <% layout('layouts/boilerplate')%>
 <link rel="stylesheet" href="/styles/stars.css" />
+<style>
+  @media (min-width: 850px) {
+    .custom {
+      display: flex;
+    }
+    .custom2 {
+      width: 50%;
+      padding: 1.5rem;
+    }
+  }
+</style>
 
-<div class="row">
-  <div class="col-6">
-    <div id="campgroundCarousel" class="carousel slide" data-ride="carousel">
-      <div class="carousel-inner">
-        <% campground.images.forEach((img, i) => { %>
-        <div class="carousel-item <%= i === 0 ? 'active' : ''%>">
-          <img src="<%= img.url%>" class="d-block w-100" alt="" />
-        </div>
-        <% }) %>
-      </div>
-      <% if(campground.images.length > 1) {%>
-      <button
-        class="carousel-control-prev"
-        type="button"
-        href="#campgroundCarousel"
-        role="button"
-        data-bs-slide="prev"
-      >
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only"></span>
-      </button>
-      <button
-        class="carousel-control-next"
-        type="button"
-        href="#campgroundCarousel"
-        role="button"
-        data-bs-slide="next"
-      >
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only"></span>
-      </button>
-      <% } %>
-    </div>
+<div class="custom">
+  <div class="custom2">
     <div class="card mb-3">
+      <div id="campgroundCarousel" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <% campground.images.forEach((img, i) => { %>
+          <div class="carousel-item <%= i === 0 ? 'active' : ''%>">
+            <img src="<%= img.url%>" class="d-block w-100" alt="" />
+          </div>
+          <% }) %>
+        </div>
+        <% if(campground.images.length > 1) {%>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          href="#campgroundCarousel"
+          role="button"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only"></span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          href="#campgroundCarousel"
+          role="button"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only"></span>
+        </button>
+        <% } %>
+      </div>
       <div class="card-body">
         <h5 class="card-title"><%= campground.title%></h5>
         <p class="card-text"><%= campground.description%></p>
@@ -65,7 +76,7 @@
       <div class="card-footer text-muted">2 days ago</div>
     </div>
   </div>
-  <div class="col-6">
+  <div class="custom2">
     <div id='map'></div>
     <% if(currentUser){ %>
     <h2>Leave a Review</h2>
